# RM

./: .gitignore  README.md
AI/Project/: warrior.uvprojx
AI/User/: main.c  main.h
AI/User/APP/FreeRTOS/: start_task.c
AI/User/APP/INS_task/: INS_task.c  INS_task.h
AI/User/APP/ROS_Receive/: ROS_Receive.c  ROS_Receive.h
AI/User/hardware/: uart1.c  uart1.h
Hero/Project/: warrior.uvprojx
Hero/User/: main.c  main.h
Hero/User/hardware/: bluetooth.c  relays.c  relays.h  trigger.h  uart1.c  uart1.h
Hero_test/Project/: warrior.uvprojx
Hero_test/User/hardware/: relays.c  relays.h  trigger.h  uart1.h
Infantry - B/Project/: warrior.uvprojx
Infantry - B/User/: main.c
Infantry - B/User/hardware/: switch.c  switch.h
Infantry/Project/: warrior.uvprojx
Infantry/User/: main.c  main.h
Infantry/User/hardware/: bluetooth.c  laser.c  laser.h  referee_usart.c  referee_usart.h  trigger.h  uart1.c  uart1.h
Project/: Project.code-workspace  warrior.uvguix.1  warrior.uvoptx  warrior.uvprojx
Project/.eide/: eide.json
User/APP/ROS_Receive/: ROS_Receive.c
User/APP/chassis_remote_control/: chassis_behaviour.c  chassis_behaviour.h  chassis_remote_control.c  chassis_remote_control.h
User/APP/gimbal_task/: gimbal_task.h
User/APP/shoot/: shoot.h
Wheel_Leg_Infantry/Project/: warrior.uvprojx
Wheel_Leg_Infantry/User/: main.c
rm_vision/: CMakeLists.txt
rm_vision/include/: serial.hpp  stop_watch.hpp  uart.hpp
rm_vision/src/: uart_recv.cpp  uart_send.cpp
哨兵/Project/: warrior.uvprojx
电路接线图/: 连线.drawio
英雄/User/hardware/: uart1.c
(+117 files in other folders)
